[gd_scene format=3 uid="uid://ddlhvc5wptjte"]

[ext_resource type="Script" uid="uid://du4k2yplnio8k" path="res://scenes/game/recipe_section.gd" id="1_p8y0s"]
[ext_resource type="PackedScene" uid="uid://co5kdkfssw80f" path="res://scenes/game/ingredient_slot.tscn" id="2_k6gmi"]

[node name="Control" type="Control" unique_id=334321247]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1531941861]

[node name="RecipeSection" type="Panel" parent="CanvasLayer" unique_id=907053446]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -40.0
offset_right = 220.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p8y0s")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/RecipeSection" unique_id=294285117]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -32.0
offset_right = -8.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/RecipeSection/MarginContainer" unique_id=180208451]
layout_mode = 2
theme_override_constants/separation = 8

[node name="IngredientSlot1" parent="CanvasLayer/RecipeSection/MarginContainer/HBoxContainer" unique_id=803735502 instance=ExtResource("2_k6gmi")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[connection signal="drag_end" from="CanvasLayer/RecipeSection/MarginContainer/HBoxContainer/IngredientSlot1" to="CanvasLayer/RecipeSection" method="_on_ingredient_slot_drag_end"]
[connection signal="drag_start" from="CanvasLayer/RecipeSection/MarginContainer/HBoxContainer/IngredientSlot1" to="CanvasLayer/RecipeSection" method="_on_ingredient_slot_drag_start"]
[connection signal="drag_step" from="CanvasLayer/RecipeSection/MarginContainer/HBoxContainer/IngredientSlot1" to="CanvasLayer/RecipeSection" method="_on_ingredient_slot_drag_step"]
